# apps/mealplanr-api/src/collections/category/category.controller.ts
@@ -1,103 +1,91 @@
-import { Request, Response } from 'express';
-import { get } from 'lodash';
-import log from '../../logger';
 import {
-	createCategory,
-	findCategory,
-	findAndUpdateCategory,
-	deleteCategory,
-} from './category.service';
+	Body,
+	Controller,
+	Delete,
+	Get,
+	Path,
+	Post,
+	Put,
+	Res,
+	Route,
+	SuccessResponse,
+	Tags,
+	TsoaResponse,
+} from 'tsoa';
+import { CategoriesService } from './category.service';
+import { CategoryCreationParams, CategoryDocument } from './category.model';
 
-/**
- * This function is used to request the creation of a new category.
- *
- * @param req - The request object.
- * @param res - The response object.
- * @returns a response with the category.
- */
-export async function createCategoryHandler(req: Request, res: Response) {
-	const body = req.body;
-
-	try {
-		if ((await findCategory({ name: body.name }))?.name === body.name) {
-			return res.status(409).send('Category already exists');
+@Route('categories')
+@Tags("Category")
+export class CategoriesController extends Controller {
+	@Get('{categoryId}')
+	public async getCategory(
+		@Path() categoryId: string,
+		@Res() notFoundResponse: TsoaResponse<404, { reason: string }>
+	): Promise<CategoryDocument> {
+		const categoryService = new CategoriesService();
+		const category = await categoryService.get(categoryId);
+		if (!category) {
+			return notFoundResponse(404, { reason: 'Category not found' });
 		}
-		const category = await createCategory({ ...body });
-		return res.send(category);
-	} catch (e) {
-		log.error(e as string);
-	}
-}
-
-/**
- * This function is used to request the update of a category.
- *
- * @param req - The request object.
- * @param res - The response object.
- * @returns a response with the updated category.
- */
-export async function updateCategoryHandler(req: Request, res: Response) {
-	const categoryId = get(req, 'query.categoryId');
-	const update = req.body;
-
-	const category = await findCategory({ _id: categoryId });
-
-	if (!category) {
-		return res.status(404).send('No such category exists');
+		return category;
 	}
 
-	if ((await findCategory({ name: update.name }))?.name === update.name) {
-		return res.status(409).send('Category already exists');
+	@SuccessResponse('201', 'resource created successfully')
+	@Post()
+	public async createCategory(
+		@Body() requestBody: CategoryCreationParams
+	): Promise<CategoryDocument> {
+		this.setStatus(201); // set return status 201
+		return new CategoriesService().create(requestBody);
 	}
 
-	const updatedCategory = await findAndUpdateCategory(
-		{ _id: categoryId },
-		update,
-		{
-			new: true,
-			// This is false because setting it true deprecated https://mongoosejs.com/docs/deprecations.html#findandmodify
-			useFindAndModify: false,
+	@SuccessResponse('200', 'resource updated successfully')
+	@Put('{categoryId}')
+	public async updateCategory(
+		@Path() categoryId: string,
+		@Body() requestBody: CategoryCreationParams,
+		@Res() notFoundResponse: TsoaResponse<404, { reason: string }>,
+		@Res() alreadyExistsResponse: TsoaResponse<409, { reason: string }>,
+		@Res() internalServerError: TsoaResponse<500, { reason: string }>
+	): Promise<CategoryDocument> {
+		const categoryService = new CategoriesService();
+		const category = await categoryService.get(categoryId);
+		if (!category) {
+			return notFoundResponse(404, { reason: 'Category not found' });
 		}
-	);
 
-	return res.send(updatedCategory);
-}
+		if (category.name === requestBody.name) {
+			return alreadyExistsResponse(409, { reason: 'Category already exists' });
+		}
 
-/**
- * This function is used to request a category.
- *
- * @param req - The request object.
- * @param res - The response object.
- * @returns a response with the category.
- */
-export async function getCategoryHandler(req: Request, res: Response) {
-	const categoryId = get(req, 'query.categoryId');
-	const category = await findCategory({ _id: categoryId });
+		const updatedCategory = await categoryService.update(
+			{ _id: categoryId },
+			requestBody
+		);
+		if (!updatedCategory) {
+			return internalServerError(500, { reason: 'Failed to update category' });
+		}
 
-	if (!category) {
-		return res.status(404).send('No such category exists');
+		return updatedCategory;
 	}
 
-	return res.send(category);
-}
+	@SuccessResponse('204', 'resource deleted successfully')
+	@Delete('{categoryId}')
+	public async deleteCategory(
+		@Path() categoryId: string,
+		@Res() notFoundResponse: TsoaResponse<404, { reason: string }>,
+		@Res() internalServerError: TsoaResponse<500, { reason: string }>
+	): Promise<void> {
+		const categoryService = new CategoriesService();
+		const category = await categoryService.get(categoryId);
+		if (!category) {
+			return notFoundResponse(404, { reason: 'Category not found' });
+		}
 
-/**
- * This function is used to request the deletion of a category.
- *
- * @param req - The request object.
- * @param res - The response object.
- * @returns a response with status 200 if successful
- */
-export async function deleteCategoryHandler(req: Request, res: Response) {
-	const categoryId = get(req, 'query.categoryId');
-
-	const category = await findCategory({ _id: categoryId });
-
-	if (!category) {
-		return res.status(404).send('No such category exists');
+		const deletedCategory = await categoryService.delete(categoryId);
+		if (!deletedCategory) {
+			return internalServerError(500, { reason: 'Failed to delete category' });
+		}
 	}
-
-	await deleteCategory({ _id: categoryId });
-
-	return res.sendStatus(200);
 }
